--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -11,3 +11,17 @@
     background-color: #f5f5f5;
   }
 }
+
+@layer components {
+  .select {
+    @apply rounded border p-1 placeholder-gray-400 shadow-sm focus:border-indigo-500 focus:outline-none focus:ring-indigo-500;
+  }
+
+  .date {
+    @apply block w-full appearance-none rounded-md border border-gray-300 px-3 py-2 placeholder-gray-400 shadow-sm focus:border-indigo-500 focus:outline-none focus:ring-indigo-500 sm:text-sm;
+  }
+
+  .button {
+    @apply flex w-full items-center justify-center space-x-3 rounded-md border border-transparent bg-indigo-600 py-2 px-4 text-sm font-medium text-white shadow-sm hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2;
+  }
+}
