--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -21,7 +21,10 @@
     @apply block w-full appearance-none rounded-md border border-gray-300 px-3 py-2 placeholder-gray-400 shadow-sm focus:border-indigo-500 focus:outline-none focus:ring-indigo-500 sm:text-sm;
   }
 
-  .button {
+  .start-button {
     @apply flex w-full items-center justify-center space-x-3 rounded-md border border-transparent bg-indigo-600 py-2 px-4 text-sm font-medium text-white shadow-sm hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2;
+  }
+  .reset-button {
+    @apply flex w-full items-center justify-center space-x-3 rounded-md border border-transparent border-indigo-600 bg-white py-2 px-4 text-sm font-medium text-indigo-600 shadow-sm hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2 hover:text-white;
   }
 }
